# suika

./: pyproject.toml
suika/: suika.py
tests/: test.sh
