[tool.poetry]
name = "suika"
version = "0.1.0"
description = ""
authors = ["MURATA Mitsuharu <hikari.photon+dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.8.4"
pandas = "^2.2.2"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
suika = "suika.suika:suika"